deploy/service.nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: krddevdays
    part: nginx
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: krddevdays
    part: nginx
