deploy/service.postgres.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgres
  namespace: default
spec:
  type: ExternalName
  externalName: host.docker.internal
  ports:
    - name: port
      port: 5432
