deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
  labels:
    app: krddevdays
    part: django
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: krddevdays
    part: django
