deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: django.local
      http:
        paths:
        - path: /static/
          pathType: Prefix
          backend:
            service:
              name: nginx
              port:
                number: 80
        - path: /
          pathType: Prefix
          backend:
            service:
              name: django
              port:
                number: 80
